# attestations-bazaar

./: .gitignore  .gitmodules  README.md
api-docs/models/: attestation-offer.yaml  attestation.graphql  priors.yaml  recipe.yaml  schema.graphql
backend/: .gitignore  bot1.js  package-lock.json  package.json
backend/bootstrap/: bootstrap.js  create_social_graph.js
backend/bootstrap/helper/: read_accounts.js
backend/model/schema/: schema_encoder
backend/services/: attestation.js  harpie.js  schema.js
frontend/: .prettierrc.json  codegen.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.netlify/: state.json
frontend/src/components/: attestation-schema-card.tsx  attestations-table.tsx  layout.tsx  main-nav.tsx  nft-card.tsx  nft-detail-page.tsx  nft-grid.tsx  recipes-table.tsx  requests-table.tsx
frontend/src/components/ui/: 3d-card.tsx  background-gradient.tsx  glowing-stars.tsx  lamp.tsx  (+3 more)
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/queries/: GET_RECIPES.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: graphql.ts  truncate.ts
graph-server/: .tool-versions  addr_pageranks.csv  app.py  fly.toml  new_graph.json  pyproject.toml
rwa-attestations/: .prettierrc.json  package-lock.json  package.json
rwa-attestations/src/components/: main-nav.tsx
rwa-attestations/src/pages/: index.tsx
smart-contracts/: foundry.toml  package.json  pnpm-lock.yaml
smart-contracts/src/: ITokenEscrow.sol  PayingResolver.sol  TokenEscrow.sol  TokenResolver.sol  TokenSender.sol  ValueResolver.sol
(+4 files in other folders)
