[tool.poetry]
name = "graph-server"
version = "0.1.0"
description = ""
authors = ["Vishnu R Menon <vishthemenon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
matplotlib = "^3.8.3"
networkx = "^3.2.1"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
